--- a/asp_lesson_3_1/asp_lesson_3_1.csproj
+++ b/asp_lesson_3_1/asp_lesson_3_1.csproj
@@ -165,6 +165,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Home\Buy.cshtml" />
+    <Content Include="Views\Home\SomeView.cshtml" />
+    <Content Include="Views\Home\SomeView2.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
