have added 3 methods: GetFile(), GetBytes(), GetStream()

--- a/asp_lesson_3_1/asp_lesson_3_1.csproj
+++ b/asp_lesson_3_1/asp_lesson_3_1.csproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Files\" />
     <Folder Include="Images\" />
   </ItemGroup>
   <ItemGroup>
