--- a/asp_lesson_3_1/asp_lesson_3_1.csproj
+++ b/asp_lesson_3_1/asp_lesson_3_1.csproj
@@ -175,6 +175,11 @@
     <Content Include="Views\Home\Index5.cshtml" />
     <Content Include="Views\Home\Index6.cshtml" />
     <Content Include="Views\Home\Index7.cshtml" />
+    <Content Include="Views\Home\Index8.cshtml" />
+    <Content Include="Views\Home\Buy3.cshtml" />
+    <Content Include="Views\Home\Index9.cshtml" />
+    <Content Include="Views\Home\Buy4.cshtml" />
+    <Content Include="Views\Home\Index10.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
