--- a/asp_lesson_3_1/asp_lesson_3_1.csproj
+++ b/asp_lesson_3_1/asp_lesson_3_1.csproj
@@ -113,7 +113,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Files\" />
     <Folder Include="Images\" />
   </ItemGroup>
@@ -130,13 +129,19 @@
     <Compile Include="Helpers\ListHelper2.cs" />
     <Compile Include="Models\Book.cs" />
     <Compile Include="Models\BookContext.cs" />
+    <Compile Include="Models\BookContext2.cs" />
     <Compile Include="Models\BookDbInitializer.cs" />
+    <Compile Include="Models\BookDbInitializer2.cs" />
     <Compile Include="Models\Purchase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\HtmlResult.cs" />
     <Compile Include="Util\ImageResult.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\Bookstore2.mdf" />
+    <Content Include="App_Data\Bookstore2_log.ldf">
+      <DependentUpon>Bookstore2.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -182,6 +187,8 @@
     <Content Include="Views\Home\Index10.cshtml" />
     <Content Include="Views\Home\Buy12.cshtml" />
     <Content Include="Views\Home\Index12.cshtml" />
+    <Content Include="Views\Home\Index13.cshtml" />
+    <Content Include="Views\Home\Buy13.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
