have added edit action method

--- a/asp_lesson_3_1/asp_lesson_3_1.csproj
+++ b/asp_lesson_3_1/asp_lesson_3_1.csproj
@@ -190,6 +190,7 @@
     <Content Include="Views\Home\Index13.cshtml" />
     <Content Include="Views\Home\Buy13.cshtml" />
     <Content Include="Views\Home\BookView.cshtml" />
+    <Content Include="Views\Home\EditBook.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
