have added create and delete action methods and views

--- a/asp_lesson_3_1/asp_lesson_3_1.csproj
+++ b/asp_lesson_3_1/asp_lesson_3_1.csproj
@@ -191,6 +191,8 @@
     <Content Include="Views\Home\Buy13.cshtml" />
     <Content Include="Views\Home\BookView.cshtml" />
     <Content Include="Views\Home\EditBook.cshtml" />
+    <Content Include="Views\Home\Create.cshtml" />
+    <Content Include="Views\Home\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
